deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v1
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fargate
  template:
    metadata:
      namespace: demo
      labels:
        app: fargate
        version: blue
    spec:
      containers:
        - name: nginx
          image: nginx:latest
