deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: wsi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fargate
      version: green
  template:
    metadata:
      namespace: wsi
      labels:
        app: fargate
        version: green
    spec:
      containers:
        - name: apache
          image: httpd:latest
