deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fargate
  template:
    metadata:
      namespace: demo
      labels:
        app: fargate
    spec:
      containers:
        - name: apache
          image: apache:latest
