service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-blue
  namespace: wsi
spec:
  type: NodePort
  selector:
    version: green
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
