service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-v2
  namespace: demo
spec:
  type: NodePort
  selector:
    app: fargate
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
