ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsi-ingress
  namespace: wsi
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # Pod가 Fargate위에서 실행되는 경우 target-type은 무조건 ip로 줘야됨
    alb.ingress.kubernetes.io/actions.forward-multiple-tg: |
      {
        "Type": "forward",
        "ForwardConfig": {
          "TargetGroups": [
            {
              "ServiceName": "service-blue",
              "ServicePort": 80,
              "Weight": 50
            },
            {
              "ServiceName": "service-green",
              "ServicePort": 80,
              "Weight": 50
            }
          ]
        }    
      }
spec:
  defaultBackend:
    service:
      name: service-blue
      port:
        number: 80
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: forward-multiple-tg
                port:
                  name: use-annotation
